--- a/packages/theme-classic/src/styles/components/_search.scss
+++ b/packages/theme-classic/src/styles/components/_search.scss
@@ -31,6 +31,11 @@ html[data-theme='dark'] {
   }
 }
 
+//TODO: abstract z-indices to css variables
+.DocSearch-Container.DocSearch-Container {
+  z-index: calc(var(--ifm-z-index-fixed) + 2);
+}
+
 //overrides
 #__docusaurus {
   [class*='searchBox_'] {
